# django-redshift-backend

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  README.rst  checklist.rst  dev-requires.txt  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py  test-requires.txt  tox.ini
.devcontainer/: devcontainer.json  on_create_command.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  lint.yml  release.yml  test-examples-proj1.yml  test.yml
django_redshift_backend/: __init__.py  base.py  compiler.py  distkey.py  meta.py  psycopg2adapter.py
django_redshift_backend/_vendor/django40/db/backends/base/: base.py  operations.py  schema.py
django_redshift_backend/_vendor/django40/db/backends/postgresql/: base.py  client.py  creation.py  features.py  introspection.py  operations.py  schema.py
doc/: CODE_OF_CONDUCT.rst  Makefile  basic.rst  changes.rst  coc.rst  code-of-conduct.rst  conf.py  design.rst  dev.rst  index.rst  make.bat  refs.rst  usage.rst
examples/dj-sql-explorer/: .env.sample  requirements.txt
examples/dj-sql-explorer/config/: asgi.py  settings.py  urls.py  wsgi.py
examples/proj1/: .env.psql  docker-compose.yml  requirements.txt
examples/proj1/config/: settings.py  urls.py
examples/proj1/testapp/: models.py
tests/: conftest.py  docker-compose.yml  settings.py  test_base.py  test_inspectdb.py  test_migrations.py  test_redshift_backend.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
wheelhouse/: psycopg2-2.5.5-cp27-cp27m-manylinux1_x86_64.whl  psycopg2-2.5.5-cp27-cp27mu-manylinux1_x86_64.whl  psycopg2-2.5.5-cp35-cp35m-manylinux1_x86_64.whl
