[metadata]
name = django-redshift-backend
url= https://github.com/jazzband/django-redshift-backend
author = shimizukawa
author_email = shimizukawa@gmail.com
license = Apache Software License
license_file = LICENSE
description = Redshift database backend for Django
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = django, redshift
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Environment :: Plugins
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://django-redshift-backend.readthedocs.io/
    Release notes = https://django-redshift-backend.readthedocs.io/en/master/changes.html
    Source = https://github.com/jazzband/django-redshift-backend
    Tracker = https://github.com/jazzband/django-redshift-backend/issues

[options]
python_requires = >=3.6, <4
packages = find:
include_package_data = false
zip_safe = false
install_requires =
    django
setup_requires =
    setuptools_scm

[options.extras_require]
psycopg2-binary = psycopg2-binary
psycopg2 = psycopg2

[bdist_wheel]
universal = 0
# 0 to make the generated wheels have `py3` tag

[flake8]
max-line-length=120
ignore = W504
exclude = tests/testapp/migrations
